feat: 통계 비교 AI 요약 추가